// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryListItem renders correctly with low stock 1`] = `
<View
  accessibilityRole="summary"
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#E5E7EB",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 12,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#111827",
          "fontSize": 16,
          "fontWeight": "600",
        }
      }
    >
      Whey Protein
    </Text>
    <Text
      style={
        {
          "color": "#6B7280",
          "fontSize": 12,
          "marginTop": 2,
        }
      }
    >
      GNY
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#374151",
          "fontSize": 14,
        }
      }
    >
      Qty: 
      3
    </Text>
    <Text
      style={
        {
          "color": "#374151",
          "fontSize": 14,
        }
      }
    >
      $
      50
    </Text>
    <View
      accessibilityLabel="Low stock: 3 of 5"
      accessibilityRole="text"
      style={
        {
          "backgroundColor": "#FEE2E2",
          "borderRadius": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "#DC2626",
            "fontSize": 12,
            "fontWeight": "600",
          }
        }
      >
        3
         / 
        5
      </Text>
    </View>
  </View>
</View>
`;

exports[`InventoryListItem renders correctly without low stock 1`] = `
<View
  accessibilityRole="summary"
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#E5E7EB",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 12,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#111827",
          "fontSize": 16,
          "fontWeight": "600",
        }
      }
    >
      Whey Protein
    </Text>
    <Text
      style={
        {
          "color": "#6B7280",
          "fontSize": 12,
          "marginTop": 2,
        }
      }
    >
      GNY
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#374151",
          "fontSize": 14,
        }
      }
    >
      Qty: 
      10
    </Text>
    <Text
      style={
        {
          "color": "#374151",
          "fontSize": 14,
        }
      }
    >
      $
      50
    </Text>
  </View>
</View>
`;
